--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "url": "git+https://github.com/jowavp/sap-cf-features.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "doc": "typedoc --tsconfig ./tsconfig.json",
+    "build": "tsc && npm run doc",
+    "deploy": "npm run build && npm publish"
   },
   "keywords": [
     "git",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.14",
     "@types/sap__xsenv": "^2.0.1",
+    "typedoc": "^0.17.8",
     "typescript": "^3.7.2"
   }
 }
